Test_Files/abstract_vm/Error/print.asm
;     Print
;   =============
;   Error test 15

push int8(80)      ; P
print
dump
pop

push int16(80)
print
dump
pop

push int32(80)
print
dump
pop

push float(80.05)
print
dump
pop

push double(80.0012)
print
dump
pop

exit
